<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/calc_bg"
    tools:context=".CalcActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_title"
        android:textColor="@color/calc_result_fg"
        />

    <TextView
        android:id="@+id/calc_tv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/calc_history_fg"
        android:paddingRight="10dp"
        android:paddingVertical="10dp"
        tools:text="2 + 3 ="
        />

    <TextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/calc_result_fg"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        tools:text="5"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">

            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/rounded_action_button"
                android:text="@string/calc_btn_percent"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"/>
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_CE"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_C"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_back"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
        </TableRow>

        <TableRow
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:layout_height="match_parent"
                android:text="@string/calc_btn_1_x"
                android:fontFamily="@font/notoserif_italic"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:layout_height="match_parent"
                android:text="@string/calc_btn_pow"
                android:fontFamily="@font/notoserif_italic"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:layout_height="match_parent"
                android:text="@string/calc_btn_square_root"
                android:fontFamily="@font/notoserif_italic"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_divide"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
        </TableRow>

        <TableRow
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_7"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_8"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_9"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_multiply"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
        </TableRow>

        <TableRow
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_4"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_5"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_6"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_difference"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
        </TableRow>

        <TableRow
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_1"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_2"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_3"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_plus"
                android:background="@drawable/rounded_action_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
        </TableRow>

        <TableRow
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp">
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_plus_minus"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_0"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_coma"
                android:background="@drawable/rounded_digit_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
            <Button
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/calc_btn_equals"
                android:background="@drawable/rounded_equals_button"
                android:textColor="@color/calc_result_fg"
                app:backgroundTint="@null"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>